# lArTest

./: CMakeLists.txt  CerenkovMinimal.gdml  CerenkovMinimalG4.gdml  Makefile  README.md  cerenkov.gdml  lArBox.gdml  lArDet.gdml  lArTest.cc  lArTestClasses_rdict.pcm  lArTub.gdml  lArTub_sm.gdml  lAr_paddle.gdml  materials.xml  muons.in  muons_tiny.in  optical.in  paddle.gdml  pi+.in  profile.in  readHits.cc  readHits_C.d  readHits_C_ACLiC_dict_rdict.pcm  scan.sh  simplelArTPC.gdml  tinylArBox.gdml  tinylArBox_color.gdml  tinysed.gdml  wls.gdml
gdml/: 3x1x1dphase_nowires.gdml  CerenkovMinimal.gdml  MinimalLArTPCdetector.gdml  MinimalLArTPCdetector_g4.gdml  MinimalLArTPCdetector_g4_nowires.gdml  MinimalLArTPCdetector_nowires.gdml  lArBox.gdml  lArDet.gdml  lArDet_split.gdml  lArTarget.gdml  lAr_box.gdml  lAr_paddle.gdml  paddle.gdml  protodune.gdml  simplelArTPC.gdml  simplelArTPC_nowires.gdml  tinylArBox_color.gdml
include/: ActionInitialization.hh  Analysis.hh  AuxDetHit.hh  AuxDetSD.hh  ConfigurationManager.hh  ConfigurationManagerMessenger.hh  CrossSD.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  EventActionMessenger.hh  HadStackingAction.hh  MemoryService.hh  PhotonHit.hh  PhotonSD.hh  PrimaryGeneratorAction.hh  RootIO.hh  RunAction.hh  SimCluster.hh  SimEnergyDeposit.hh  SimEnergyDepositSD.hh  SimStep.hh  SimTrajectory.hh  SteppingAction.hh  SteppingKillAction.hh  TempHit.hh  TrackerSD.hh  lArTestClasses.hh
macros/: muons.in  pi+.in
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
scripts/: #dEdx.C#  Ana.C  Cerenkov.C  LAr.C  LAr_C.d  LAr_C_ACLiC_dict_rdict.pcm  bnl.C  dEdx.C  dEdx.root  dEdxTable.C  dedx_vs_residualrange.C  lArRoot.C  losses.C  muB_liquid_argon.txt  penergy.txt  proton_argon.txt  readHits.C  recom.C  scan.sh  scan_p.sh  scanmup.sh  scanp.sh  scint.C
src/: ActionInitialization.cc  Analysis.cc  AuxDetSD.cc  ColorReader.cc  ConfigurationManager.cc  ConfigurationManagerMessenger.cc  CrossSD.cc  DetectorConstruction.cc  DetectorConstruction.cc_save  DetectorMessenger.cc  EventAction.cc  EventActionMessenger.cc  HadStackingAction.cc  MemoryService.cc  PhotonHit.cc  PhotonSD.cc  PrimaryGeneratorAction.cc  RootIO.cc  RunAction.cc  SimCluster.cc  SimEnergyDeposit.cc  SimEnergyDepositSD.cc  SimStep.cc  SimTrajectory.cc  SteppingAction.cc  SteppingKillAction.cc  TrackerSD.cc
xml/: selection.xml
